--- a/index.html
+++ b/index.html
@@ -1,33 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | NFT preview card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="styles.css" type="text/css">
 </head>
 <body>
+  <div class="container">
+    <div class="content">
+      <div class="container-image">
+        <img src="images/image-equilibrium.jpg" alt="Image NFT" class="image-nft">
+        <div class="view-image">
+          <img src="images/icon-view.svg" alt="View icon" class="view-icon-image">
+        </div>
+      </div>  
+      <div class="description">
+        <h1>Equilibrium #3429</h1>
 
-  Equilibrium #3429
-
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
+        <p>Our Equilibrium collection promotes balance and calm.</p>
+      </div>
+      <div class="data-description">
+        <div class="eth-price-nft">
+          <img src="images/icon-ethereum.svg" alt="Ethereum icon to NFT post">
+          0.041 ETH
+        </div>
+        <div class="date-nft">
+          <img src="/images/icon-clock.svg" alt="Clock icon to NFT post">
+          3 days left
+        </div>
+      </div>
+      <div class="line-division"></div>
+      <div class="create-section">
+        <img src="images/image-avatar.png" alt="Image from NFT creator" id="image-creator">
+        <p>Creation of <a href="#">Jules Wyvern</a></p>
+      </div>
+    </div>
   
-  Creation of Jules Wyvern
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    <div class="attribution">
+      <p>Challenge by  <a href="https://www.frontendmentor.io/challenges/nft-preview-card-component-SbdUL_w0U" target="_blank">Frontend Mentor</a>.</p><br>
+      <p>Coded by <a href="https://github.com/devgl96/">George Lucas</a>.</p>
+    </div>
   </div>
 </body>
 </html>
