Fix the error in images from github pages

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           0.041 ETH
         </div>
         <div class="date-nft">
-          <img src="/images/icon-clock.svg" alt="Clock icon to NFT post">
+          <img src="images/icon-clock.svg" alt="Clock icon to NFT post">
           3 days left
         </div>
       </div>
